--- a/index.html
+++ b/index.html
@@ -4,11 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Pangolin:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    
-
+    <header> 
+        <h1 class="title">Etch-A-Sketch</h1>
+    </header>
+    <main>
+        <div class="settings">
+            <input id="color-picker" type="color" value="#333333">   
+            <button id="color-button">Color mode</button> 
+            <button id="rainbow-button">Rainbow mode</button>
+            <button id="eraser-button">Eraser</button>
+            <button id="clear-button">Clear</button>
+            <div id="size-value">Grid Size: 16 x 16</div>    
+            <input id="size-slider" type="range" min="1" max="64" value="16">
+        </div>
+        <div id="grid" class="grid"></div>  
+    </main>
+    <footer>
+        <p>
+            Copyright ©
+            <script>
+                document.write(new Date().getFullYear())
+            </script>
+            ZackCornfield
+        </p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
